<resources>
    <string name="app_name">AndroidTechPracticeApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem"><div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aspernatur atque cumque distinctio doloremque dolores eius eligendi et expedita facilis fugiat inventore, ipsum modi nisi nulla omnis repellat rerum. Repudiandae.</div><div>Beatae dolorum enim nisi nostrum odit officiis ratione. Alias autem delectus dignissimos distinctio ipsa rem repellat? Amet, consequatur delectus dolorem ex facere fugit in nisi nobis nulla placeat porro temporibus?</div></string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="my_profile">Мой профиль</string>
    <string name="my_messages">Мои сообщения</string>
    <string name="my_tasks">Мои задания</string>
    <string name="create_new_task">Создать задание</string>
    <string name="create_post_task">Создать пост</string>
    <string name="logout">Выйти</string>
    <string name="profile_settings">Настройки профиля</string>
    <string name="my_map">Карта добра</string>
</resources>